<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cursoaltice.calculatupesoideal.ChooseMethodActivity"
    tools:showIn="@layout/activity_choose_method">
    <!--tools:context="com.cursoaltice.calculatupesoideal.MainActivity"-->
    <!--tools:showIn="@layout/app_bar_main"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            style="@style/Title"
            android:text="@string/choose_method" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chose_complexion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@mipmap/captura"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/Subtitle"
            android:text="@string/choose_method_complexion" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/chose_imc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@mipmap/captura1"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            style="@style/Subtitle"
            android:layout_weight="1"
            android:text="@string/choose_method_imc" />
    </LinearLayout>





</LinearLayout>
